trunk/Archive2/d5/31c68cffc9548a/output
main.cpp: In function ‘int main()’:
main.cpp:10:5: error: expected primary-expression before ‘/’ token
     /assert(2+2==5);
     ^
